tests/functional/repl_characterization/data/repl_overlays_destructure_without_dotdotdot_errors.test
`repl-overlays` that try to parse out the `info` argument without a `...` error.
@args --repl-overlays
@args ${PWD}/extra_data/repl-overlay-no-dotdotdot.nix
@should-start false
  error: Expected first argument of repl-overlays to have ... to allow future versions of Lix to add additional attributes to the argument
         at $TEST_DATA/extra_data/repl-overlay-no-dotdotdot.nix:4:3:
              3| in
              4|   {currentSystem}: final: prev: {
               |   ^
              5|     inherit puppy;\n
